# lamsubs

./: Cargo.toml  README.md  host.json  main.bicep
.github/workflows/: build-deploy.yml  on-push.yml
get_subscribers/: function.json
src/: lib.rs  main.rs
